--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Angular",
+  "name": "graphs-demo",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -49,6 +49,8 @@
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
   },
-  "keywords": ["angular"],
+  "keywords": [
+    "angular"
+  ],
   "description": ""
 }
